# 4cc

./: .clang-tidy  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  _clang-format  flake.nix  meson.build
.github/workflows/: build.yml  ci.yml  rust.yml
ci/: common.sh  configure.sh  test.sh
src/: ast.c  ast.h  config.h  dump.c  dump.h  error.c  error.h  eval.c  eval.h  gen.c  gen.h  lex.c  lex.h  main.c  main.rs  meson.build  parse.c  parse.h  subprocess.c  subprocess.h  type.c  type.h  util.c  util.h  visit.c
src/include/: meson.build  stdarg.h  stddef.h
src/parse/: ast.rs  lex.rs  mod.rs
subprojects/: a3.wrap
test/: extra_tests.py  meson.build  test.c  test.h  test.py  test_invalid.py
test/array/: 2d.c  index.c  index_2d.c  pointer.c  pointer_index.c  simple.c
test/assign/: arithmetic.c  arithmetic.txt  long_ident.c  long_ident.txt  mixed_ident.c  mixed_ident.txt  multiple.c  multiple.txt  mutate.c  mutate.txt  simple.c  simple.txt  simple_split.c  simple_split.txt
test/call/: args.c  args.txt  args6.c  args6.txt  expr.c  expr.txt  nested.c  nested.txt  simple.c  simple.txt  very_nested.c  very_nested.txt
test/char/: arithmetic.c  simple.c
test/comment/: block.c  line.c
test/decl/: array.c  ptr_to_array.c  simple.c
test/escape/: backslash.c  double_quote.c  form_feed.c  hex.c  lf.c  octal.c  question.c  single_quote.c  tab.c  text.c  text.out  vtab.c
test/expr/: add_sub.c  add_sub.txt  div.c  div.txt  double_unary_minus.txt  eq_eq.txt  eq_ne.txt  ge_eq.c  ge_eq.txt  ge_gt.c  ge_gt.txt  ge_lt.txt  gt_eq.c  gt_eq.txt  gt_gt.txt  gt_lt.txt  le_eq.c  le_eq.txt  le_gt.txt  le_lt.txt  lt_eq.c  lt_eq.txt  lt_gt.txt  lt_lt.c  lt_lt.txt  mul.txt  multiple_stmts.c  multiple_stmts.txt  ne_eq.txt  ne_ne.txt  num0.txt  num42.txt  paren.c  paren.txt  spaces.txt  unary_minus.c  unary_minus.txt  unary_plus.txt
test/fn/: multiple.c  params.c  recursive.c  simple.c
test/global/: init.c
test/if/: else_false.c  else_false.txt  else_true.c  else_true.txt  expr_false.c  expr_false.txt  expr_true.c  expr_true.txt  nested.c  nested.txt  simple_false.c  simple_false.txt  simple_true.c  simple_true.txt
test/loop/: continue.c  do_while.c  do_while_once.c  nested.c  nested.txt  return_from_for.c  return_from_for.txt  simple_for.c  simple_for.txt  simple_while.c  simple_while.txt
test/pointer/: add.c  add.txt  add_lhs.c  add_lhs.txt  diff.c  diff.txt  double.c  double.txt  mutate.c  mutate.txt  simple.c  simple.txt  sub.c  sub.txt  sub_lhs.c  sub_lhs.txt  void.c
test/projects/: common.py  meson.build
test/projects/getopt/: build.py
test/return/: early.c  early.txt  last.c  last.txt  mid.c  mid.txt
test/sizeof/: i16.c  i8.c
test/stmt/: block.c  block.txt  block_scope.c  empty.c  empty.txt
test/string/: arg.c  arithmetic.c
test/struct/: alignment.c  array.c  comma.c  global.c  named.c  named_decl.c  named_global_decl.c  size_multiple_types.c
test/ternary/: nested.c  simple.c
test/union/: name.c  nested.c  ptr.c  size.c
test/unit/: extra_tests.py  meson.build  test.py
test/unit/array/: 2d.c  index.c
test/unit/bug/: field_name_corruption.c
test/unit/call/: many_args.c  nested.c  printf_many_args.c  printf_many_args.out  simple.c  static.c  variadic.c  variadic_def.c  variadic_many_args.c
test/unit/char/: arithmetic.c  simple.c
test/unit/decl/: array_of_array.c  array_of_ptr.c  composite.c  const.c  const_eval.c  extern.c  extern_fn.c  extern_unsized_array.c
test/unit/enum/: explicit.c  named.c  simple.c  size.c
test/unit/escape/: backspace.c  bell.c  cr.c  escape.c  question.c  single_quote.c  tab.c
test/unit/expr/: and.c  cast.c  char.c  compound_assign.c  dec.c  double_unary_minus.c  eq_eq.c  eq_ne.c  ge_lt.c  gt_gt.c  gt_lt.c  hex.c  i32.c  inc.c  le_gt.c  le_lt.c  long_suffix.c  lt_gt.c  mod.c  mul.c  multiple_stmts.c  ne_eq.c  ne_ne.c  null_assign.c  octal.c  or.c  shl.c  shr.c  spaces.c  unary_plus.c  unsigned_literal.c  xor.c
test/unit/global/: array.c  simple.c
test/unit/goto/: loop.c  simple.c
test/unit/if/: nested.c  simple_false.c
test/unit/init/: array.c  struct.c  struct_global.c  struct_nested.c  struct_partial.c
test/unit/lib/: test.c  test.h
test/unit/loop/: break.c  break_nested.c  continue_nested.c  nested.c  return_from_for.c
test/unit/pointer/: add.c  add_lhs.c  double.c  sub.c  sub_lhs.c  void_array.c
test/unit/sizeof/: array.c  i32.c  i64.c  int.c  int_lit.c  long.c  ptr.c  short.c  signed.c  type.c  unsigned.c
test/unit/std/: assert.c  ctype.c  stdio.c  stdio.out  string.c
test/unit/stmt/: block.c  block_scope_assign.c  empty.c
test/unit/string/: arg.c  concat.c  empty.c  index.c
test/unit/struct/: array_member.c  assign.c  forward_decl.c  multiple_types.c  named_ptr.c  named_scoped.c  nested.c  ptr_access.c  simple.c  size_simple.c
test/unit/switch/: default.c  fallthrough.c  nothing.c  simple.c
test/unit/ternary/: omit_true.c
test/unit/typedef/: empty.c  global.c  nested.c  scope.c  simple.c  struct.c  suffix.c
test/unit/union/: assign.c  simple.c
test/unit/var/: arithmetic.c  fn_ptr.c  fn_ptr_nested.c  mixed_ident.c  simple_split.c  static.c
test/var/: align.c
